--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
 	"name":"fritzmg/contao-lazy-load-element",
 	"description":"Contao extension to allow lazy loading of content elements or modules.",
 	"keywords":["contao", "lazy", "load", "content", "module", "element"],
-	"type":"contao-module",
+	"type":"contao-bundle",
 	"homepage":"http://www.inspiredminds.at",
-	"license":"LGPL-3.0+",
+	"license":"LGPL-3.0-or-later",
 	"authors":[
 		{
 			"name":"Fritz Michael Gschwantner",
@@ -26,17 +26,18 @@
 		}
 	],
 	"require":{
-		"php":">=5.4",
-		"contao/core-bundle":"~3.5 || ~4.2",
-		"contao-community-alliance/composer-plugin":"~2.4 || ~3.0",
-		"richardhj/contao-simple-ajax": "~1.0",
-		"codefog/contao-haste": "~4.0"
+		"php": ">=7.4",
+		"contao/core-bundle": "^4.13"
+	},
+	"autoload": {
+		"psr-4": {
+			"InspiredMinds\\ContaoLazyLoadElement\\": "src"
+		},
+		"classmap": [
+			"contao/classes"
+		]
 	},
 	"extra":{
-		"contao":{
-			"sources": {
-				"system/modules/lazy_load_element":"system/modules/lazy_load_element"
-			}
-		}
+		"contao-manager-plugin": "InspiredMinds\\ContaoLazyLoadElement\\ContaoManager\\Plugin"
 	}
 }
